Implemented the new options

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -59,19 +59,25 @@
     "card": {
         "CheckLocationCard": {
             "name": "Archipelago Check!",
-            "descNotFound": "Send an Archipelago item.",
+            "descNotFound": "Send an <c=boldPink>Archipelago</c> item.",
             "descBase": "Send <c=card>{0}</c> to <c=attack>{1}</c>.",
             "descSelf": "Unlock <c=card>{0}</c>.",
-            "descContA": " <c=healthBarShield>Shield {0}</c>.",
-            "descContB": " <c=attack>Attack {0} x{1}</c>."
+            "descSelfAddCard": "Unlock <c=card>{0}</c> and add it to your hand.",
+            "descSelfAddArtifact": "Unlock and get <c=card>{0}</c>.",
+            "descContShield": "\n<c=healthBarShield>Shield {0}</c>.",
+            "descContTempShield": "\n<c=healthBarTempShield>Shield {0}</c>.",
+            "descContAttack": "\n<c=attack>Attack {0} x{1}</c>.",
+            "descDraw": "Draw {0}."
         }
     },
     "artifact": {
         "CheckLocationArtifact": {
             "name": "ARCHIPELAGO CHECK!",
-            "descNotFound": "Send an Archipelago item.",
+            "descNotFound": "Send an <c=boldPink>Archipelago</c> item.",
             "descBase": "Send <c=card>{0}</c> to <c=attack>{1}</c>.",
-            "descSelf": "Unlock <c=card>{0}</c>."
+            "descSelf": "Unlock <c=card>{0}</c>.",
+            "descSelfAddCard": "Unlock <c=card>{0}</c> and add it to your deck.",
+            "descSelfAddArtifact": "Unlock and get <c=card>{0}</c>."
         },
         "LockedArtifact": {
             "name": "LOCKED ARTIFACT",
