--- a/i18n/en.json
+++ b/i18n/en.json
@@ -52,7 +52,7 @@
     },
     "action": {
         "AArchipelagoCheckLocation": {
-            "title": "Archipelago Check",
+            "title": "AP Check",
             "desc": "Check an <c=boldPink>Archipelago</c> location and give an item to someone.",
             "descItem": "<c=card>Item:</c> {0}",
             "descReceiver": "<c=card>Receiver:</c> {0}"
