Temp shield text fix

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -12,7 +12,7 @@
         "connect": "CONNECT",
         "invalidPort": "Invalid port number",
         "connectionIssue": "Failed to connect to Archipelago host.\nMake sure the address, port, slot name and password are correct.",
-        "roomIdConflict": "The room ID has changed since the last time you connected with this save.\nAre you sure you are connecting to the right address/port?",
+        "roomIdConflict": "The room ID has changed since the last time you connected with this save.\nAre you <c=card>absolutely</c> sure you are connecting to the right address/port?",
         "connectAnyway": "CONNECT\nANYWAY",
         "cantConnect": "Connection to the host failed.",
         "retry": "RETRY",
@@ -71,9 +71,9 @@
             "descSelf": "Unlock <c=card>{0}</c>.",
             "descSelfAddCard": "Unlock <c=card>{0}</c> and add it to your hand.",
             "descSelfAddArtifact": "Unlock and get <c=artifact>{0}</c>.",
-            "descContShield": "\n<c=healthBarShield>Shield {0}</c>.",
-            "descContTempShield": "\n<c=healthBarTempShield>Shield {0}</c>.",
-            "descContAttack": "\n<c=attack>Attack {0} x{1}</c>.",
+            "descContShield": "\nShield <c=healthBarShield>{0}</c>.",
+            "descContTempShield": "\nTmp shield <c=healthBarTempShield>{0}</c>.",
+            "descContAttack": "\nAttack <c=attack>{0}</c>x{1}.",
             "descDraw": "Draw {0}.",
             "descNothing": "You already found this item!"
         },
