Overhauled DeathLink & DeathLinkBoros

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -23,7 +23,20 @@
         "deathlink": {
             "settingName": "Deathlink",
             "tooltipName": "<c=artifact>DEATHLINK</c>",
-            "desc": "If you die, other players die as well. Of course, the reverse is also true."
+            "desc": "How deathlink is applied to your game. Cobalt Core runs can be pretty long, so make sure to pick the setting that suits you best.",
+            "nameOff": "Off",
+            "descOff": "<c=card>Off:</c> deactivate deathlink.",
+            "nameMissing": "Missing!",
+            "descMissing": "<c=card>Missing!:</c> if another player dies, one of your character goes missing. If you die, other players die as well.\nGood if other players die frequently.",
+            "nameHullDamage": "Hull damage",
+            "descHullDamage": "<c=card>Hull damage:</c> if another player dies, you will lose some hull. If you die, other players die as well.\nGood if other players die a normal amount.",
+            "nameDeath": "Die",
+            "descDeath": "<c=card>Die:</c> if another player dies, you die. If you die, other players die as well.\nGood if other players die rarely."
+        },
+        "deathlinkHullDamage": {
+            "settingName": "Deathlink Hull Damage",
+            "tooltipName": "<c=artifact>DEATHLINK HULL DAMAGE</c>",
+            "desc": "How much hull you will lose when you receive a deathlink from another player."
         },
         "automaticScouting": {
             "settingName": "Auto-scouting",
@@ -83,9 +96,11 @@
         },
         "DeathLinkBoros": {
             "name": "Linkoboros",
-            "descBase": "Attack for <c=attack>{0}</c> dmg.\n+1 for every {2} <c=redd>deathlink</c>.\n<c=action>({1}/{2})</c>",
-            "descA": "Shield for <c=healthBarShield>{0}</c>.\n+1 for every {2} <c=redd>deathlink</c>.\n<c=action>({1}/{2})</c>",
-            "descB": "<c=status>Overdrive {0}</c>.\n+1 for every {2} <c=redd>deathlink</c>.\n<c=action>({1}/{2})</c>"
+            "descBase": "Attack for <c=attack>{0}</c> dmg.",
+            "descA": "Shield <c=healthBarShield>{0}</c>.\nTmp Shield <c=healthBarTempShield>{0}</c>.",
+            "descB": "<c=status>Overdrive {0}</c>.",
+            "descRamp": "\n+1 for every {1} <c=redd>deathlink</c>.\n<c=action>({0}/{1})</c>",
+            "descRampOne": "\n+1 for every <c=redd>deathlink</c>."
         }
     },
     "artifact": {
