--- a/i18n/en.json
+++ b/i18n/en.json
@@ -55,10 +55,13 @@
             "desc": "Check to ignore the minimum difficulty setting in your YAML options, if you changed your mind for example."
         },
         "messagesInMenu": {
-            "settingName": "Main menu messages",
-            "tooltipName": "<c=artifact>MAIN MENU MESSAGES</c>",
-            "desc": "Check to see Archipelago server messages on the main menu."
+            "settingName": "Main menu console",
+            "tooltipName": "<c=artifact>MAIN MENU CONSOLE</c>",
+            "desc": "See the Archipelago console in the main menu."
         }
+    },
+    "mainMenu": {
+        "welcomeMessage": "<c=card>Welcome to Archipelago!\nDon't forget to take a look at your <c=redd>Mod Settings</c> to setup options such as <c=redd>deathlink</c> and <c=redd>hint messages</c>!</c>"
     },
     "newRunOptions": {
         "shipUnlock": "You haven't unlocked this ship yet!",
