Prevent undoing deathlinks

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -81,7 +81,8 @@
             "cannotUndoReason": "sending an Archipelago item"
         },
         "AInvalidateUndos": {
-            "cannotUndoReason": "receiving an item from Archipelago"
+            "reasonItemReceived": "receiving an item from Archipelago",
+            "reasonDeathlinkReceived": "receiving a deathlink"
         }
     },
     "card": {
