Implemented unlock_memory_for_all_characters

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -126,6 +126,10 @@
     },
     "story": {
         "memory": {
+            "AllThreeEndTalk": {
+                "Void1": "Then so it shall be."
+            },
+            
             "BooksEndTalk1": {
                 "Books1": "I'm Books!",
                 "Void1": "Cool"
