--- a/i18n/en.json
+++ b/i18n/en.json
@@ -75,9 +75,11 @@
         "bootOptionUnlockedCardName": "Pick an <c=boldPink>unlocked</c> card",
         "bootOptionUnlockedCardDesc": "unlocked cards",
         "bootOptionUnlockedCardTitle": "Unlocked cards: {0} cards",
+        "bootOptionUnlockedArtifactName": "Pick 1 of {0} <c=boldPink>unlocked</c> artifacts",
         "eventMissedAPCardName": "Pick a missed <c=boldPink>archipelago</c> card",
         "eventMissedAPCardDesc": "missed archipelago items",
         "eventMissedAPCardTitle": "Missed archipelago items: {0} cards",
+        "eventMissedAPArtifactName": "Pick 1 of {0} missed <c=boldPink>archipelago</c> artifacts",
         "addCardActionDoing": "Select a card to add to your deck.",
         "addCardActionDone": "The card has been added to your deck."
     },
