--- a/i18n/en.json
+++ b/i18n/en.json
@@ -37,12 +37,12 @@
             "descDeath": "<c=card>Die:</c> if another player dies, you die. If you die, other players die as well.\nGood if other players die rarely."
         },
         "deathlinkHullDamage": {
-            "settingName": "Deathlink Hull Damage",
+            "settingName": "        Hull Damage",
             "tooltipName": "<c=artifact>DEATHLINK HULL DAMAGE</c>",
             "desc": "How much hull you will lose when you receive a deathlink from another player."
         },
         "deathlinkHullDamagePercent": {
-            "settingName": "Deathlink Hull Damage",
+            "settingName": "        Hull Damage",
             "tooltipName": "<c=artifact>DEATHLINK HULL DAMAGE</c>",
             "desc": "How much percentage of your max hull you will lose when you receive a deathlink from another player (rounded up)."
         },
