--- a/i18n/en.json
+++ b/i18n/en.json
@@ -86,6 +86,10 @@
     "cardReward": {
         "apCardsTip": "<c=boldPink>Archipelago cards</c> that you don't pick will not reappear\nfor a while, but you can find them again at Cleo's shop."
     },
+    "vault": {
+        "goalTotalMemories": "Memories found:\n{0} / {1}",
+        "goalPerCharacterMemories": "Memories required:\n{0} per character\n\nCharacters completed:\n{1} / {2}"
+    },
     "deck": {
         "name": "Archipelago",
         "lockedName": "Locked"
