Added basic tracker functionality in codex

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -71,6 +71,9 @@
         "shipUnlock": "You haven't unlocked this ship yet!",
         "charUnlock": "You haven't unlocked this character yet!"
     },
+    "codex": {
+        "trackerName": "<c=boldPink>ARCHIPELAGO TRACKER</c>"
+    },
     "cardBrowse": {
         "bootOptionUnlockedCardName": "Pick an <c=boldPink>unlocked</c> card",
         "bootOptionUnlockedCardDesc": "unlocked cards",
